# software-agentic-team

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_STANDARDS.md  CONTRIBUTING.md  FAILURE_RECOVERY.md  README.md  RUNBOOK.md  SKILLS.md  STATE_FLOW.md  TESTING.md  architecture_overview.txt  docker-compose.yml  pyproject.toml
src/: __init__.py  app.py
src/agents/: __init__.py  architect.py  backend_engineer.py  frontend_engineer.py  memory.py  requirement_analyzer.py  reviewer.py  task_planner.py  tester.py  watchdog.py
src/api/: __init__.py  routes.py
src/core/: __init__.py  config.py  graph.py  middleware.py  observability.py  state.py
src/tools/: __init__.py  executor.py  filesystem.py  git_tracker.py
tests/: test_tools_integration.py
