[project]
name = "ai-software-team"
version = "0.1.0"
description = "Production-grade Autonomous AI Software Engineering Team powered by LangGraph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.47.0",
    "langgraph>=1.2.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.0",
    "pydantic>=2.13.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
